fixed overflow

--- a/style.css
+++ b/style.css
@@ -3,11 +3,13 @@
   margin: 0px;
   box-sizing: border-box;
   letter-spacing: 0em;
+  overflow: hidden;
 }
 body {
   background: #181719;
   color: #ffffff;
   margin: 46px 77px 24px 77px;
+  overflow: hidden;
 }
 
 @media (min-width: 768px) {
